--- a/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -1,6 +1,6 @@
 <h4>{{'general.table.header.eventTimestamp.header' | translate }}</h4>
 <div class="headline">
-  <p-card styleClass="card-scondary">
+  <p-card styleClass="card-secondary">
     <div class="p-fluid p-formgrid grid">
       <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="vesselName">{{'general.transportCall.table.vesselName.label'| translate}}
@@ -94,8 +94,8 @@
       <span
         *ngIf="timestampFormGroup.get('locationName').hasError('required') && timestampFormGroup.get('locationName').touched"
         class="p-invalid">
-        {{ 'general.transportCall.table.locationName.required' | translate }} 
-        {{ this.responseTimestamp?.timestampDefinitionTO?.timestampTypeName }} 
+        {{ 'general.transportCall.table.locationName.required' | translate }}
+        {{ this.responseTimestamp?.timestampDefinitionTO?.timestampTypeName }}
       </span>
     </div>
     <!-- Miles remaning -->
