Rewrite creationg of new timestamp (TS editor)
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -186,14 +186,14 @@
     <p-button (onClick)="close()" class="footer_option__buttons" icon="pi pi-times-circle"
       label="{{'general.close.label' | translate}}" iconPos="left">
     </p-button>
-    <p-button *ngIf="timestampResponseStatus == 'Rejected'" (onClick)="savePortcallTimestamp()"
+    <p-button *ngIf="timestampResponseStatus == 'Rejected'" (onClick)="saveTimestamp()"
       [disabled]="validatePortOfCallTimestamp()  || timestampFormGroup.invalid" class="footer_option__buttons" icon="pi pi-save"
       label="{{'general.save.Rejecteditor.label' | translate}}" iconPos="left">
       <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
         strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
     </p-button>
 
-    <p-button *ngIf="timestampResponseStatus == 'Accepted'" (onClick)="savePortcallTimestamp()"
+    <p-button *ngIf="timestampResponseStatus == 'Accepted'" (onClick)="saveTimestamp()"
     [disabled]="timestampFormGroup.invalid"
       class="footer_option__buttons" icon="pi pi-save" label="{{'general.save.Accepteditor.label' | translate}}"
       iconPos="left">
