--- a/src/app/view/transport-calls-table/transport-calls-table.component.html
+++ b/src/app/view/transport-calls-table/transport-calls-table.component.html
@@ -40,8 +40,8 @@
   </ng-template>
   <ng-template pTemplate="body" let-transportCall>
     <tr [pSelectableRow]="transportCall" [ngClass]="{'obsoleteTransportCall': transportCall.atdBerthDateTime != undefined}">
-      <td pTooltip="{{  transportCall.vessel | vesselTooltip}}">  {{transportCall.vesselName}}</td>
-      <td pTooltip="{{  transportCall.vessel | vesselTooltip }}"> {{transportCall.vesselIMONumber}}</td>
+      <td pTooltip="{{  transportCall.vessel | vesselTooltip}}">  {{transportCall.vessel.vesselName}}</td>
+      <td pTooltip="{{  transportCall.vessel | vesselTooltip }}"> {{transportCall.vessel.vesselIMONumber}}</td>
       <td>{{transportCall.UNLocationCode}}</td>
       <td pTooltip="UTC: {{(transportCall.etaBerthDateTime | timestampToTimezone: transportCall.portOfCall)[1]}}">
         {{(transportCall.etaBerthDateTime | timestampToTimezone: transportCall.portOfCall)[0]}}</td>
