--- a/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
+++ b/src/app/view/timestamp-accept-editor/timestamp-accept-editor.component.html
@@ -18,7 +18,7 @@
       <div class="p-field col-12 md:col-4">
         <label class="label-compressed" for="vesselIMO">{{'general.transportCall.table.vesselImo.label'| translate}}
           : </label>
-        <span id="vesselIMO"> {{transportCall.vesselIMONumber}}</span>
+        <span id="vesselIMO"> {{transportCall.vessel.vesselIMONumber}}</span>
       </div>
       <div class="p-field col-12 md:col-4" *ngIf="respondingToTimestampInfo != null">
         <!-- Placeholder for additional information when rejecting timestamp -->
