--- a/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/src/app/view/timestamp-table/timestamp-table.component.html
@@ -44,7 +44,7 @@
             <div class="col tableHeader">
                 <div class="tableHeader__buttons">
                     <p-button class="p-button-raised p-button-rounded tableHeader__add_button"
-                        (onClick)="openCreationDialog(null)" icon="pi pi-plus"
+                        (onClick)="openCreationDialog()" icon="pi pi-plus"
                         pTooltip="{{ 'general.table.header.create.tooltip' | translate }}" tooltipPosition="left"
                         type="button" tooltipStyleClass="ToolTipClass"></p-button>
                 </div>
