Add directive to prevent debounce clicks
- This is to prevent posting identical PC or Timestamps, which occurs when the buttons are double clicked. Thus we debounce

--- a/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -188,8 +188,9 @@
     <p-button (onClick)="close()" class="footer_option__buttons" icon="pi pi-times-circle"
       label="{{'general.close.label' | translate}}" iconPos="left">
     </p-button>
-    <p-button (onClick)="saveTimestamp()" class="footer_option__buttons"
-    [disabled]=" timestampFormGroup.invalid" icon="pi pi-save" label="{{createButtonText()| translate}}" iconPos="left">
+    <p-button class="footer_option__buttons" appDebounceClick (debounceClick)="saveTimestamp()" [debounceTime]="200"
+      [disabled]=" timestampFormGroup.invalid" icon="pi pi-save" label="{{createButtonText()| translate}}"
+      iconPos="left">
       <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}" styleClass="custom-spinner"
         strokeWidth="3" animationDuration=".9s"></p-progressSpinner>
     </p-button>
